# sql2model

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
parsers/: csharp_parser.py
sql2model_env/: pyvenv.cfg
sql2model_env/Scripts/: activate  activate.bat
src/cli/: cli.py
src/parsers/: base.py  csharp_parser.py
src/utils/: app_helper.py  validate_requets.py  var_helper.py
